adding fav city to localstorage feature

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <body>
     <input type="text" id="input" />
     <button id="searchBtn">Search</button>
+    <div id="weatherContainer">
+
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
